[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cobraaudit"
version = "1.0.0"
description = "Bug bounty audit tool — API key validation, OAuth misconfiguration testing, password reset auditing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
cobraaudit = "cobraaudit:main"

[tool.setuptools]
py-modules = ["cobraaudit"]
